# gazette

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  config.json  install.sh
src/: changelog.rs  cli.rs  config.rs  gemini.rs  github.rs  jira.rs  main.rs
src/ai/: anthropic.rs  gemini.rs  mod.rs  ollama.rs  openai.rs
src/menu/: changelog.rs  credentials.rs  main_menu.rs  mod.rs
