[package]
name = "gazette"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
inquire = "0.6"
anyhow = "1.0"
owo-colors = "3.5"
dotenvy = "0.15"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
base64 = "0.22"
crossterm = "0.27"